--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  background: #f5f5f5;
+  color: rgb(115, 115, 115);
+}
+
+.navbar li {
+  cursor: pointer;
+}
+.navbar a:hover {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+
+.main-image {
+  box-shadow: 0 0 10px 5px rgb(169, 168, 168);
+}
+.navShadow {
+  box-shadow: inset 0 -4px 10px rgb(169, 168, 168);
+}
+.footShadow {
+  box-shadow: inset -4px 0 15px rgb(169, 168, 168);
+}
+.body-image {
+  box-shadow: 0 0 15px 5px rgb(210, 210, 210);
 }
